--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,11 @@
 # Sets default memory used for gradle commands. Can be overridden by user or command line properties.
 # This is required to provide enough memory for the Minecraft decompilation process.
-org.gradle.jvmargs=-Xmx3G
+org.gradle.jvmargs=-Xmx4G
 org.gradle.daemon=false
+
+mod_id=rys
+mod_name=Ready Your Shovels
+mod_version=0.1.7
+mod_authors=camiloss20
+mod_credits=Axoladdy
+mod_description=Ready Your Shovels
