--- a/src/main/resources/assets/rys/models/item/apple_fruit_tree.json
+++ b/src/main/resources/assets/rys/models/item/apple_fruit_tree.json
@@ -1,3 +1,6 @@
 {
-    "parent": "rys:block/apple_fruit_tree"
+    "parent": "item/generated",
+    "textures": {
+        "layer0": "rys:block/apple_fruit_tree"
+    }
 }
