--- a/gradle.properties
+++ b/gradle.properties
@@ -4,8 +4,9 @@ org.gradle.jvmargs=-Xmx4G
 org.gradle.daemon=false
 
 mod_id=rys
+mod_group=group.rys
 mod_name=Ready Your Shovels
-mod_version=0.1.13
+mod_version=0.1.14
 mod_authors=camiloss20
 mod_credits=Axoladdy
 mod_description=Ready Your Shovels
