--- a/src/main/resources/META-INF/accesstransformer.cfg
+++ b/src/main/resources/META-INF/accesstransformer.cfg
@@ -1,2 +1,3 @@
 public net.minecraft.block.StairsBlock <init>(Lnet/minecraft/block/BlockState;Lnet/minecraft/block/Block$Properties;)V # StairsBlock
 public net.minecraft.potion.PotionBrewing func_193357_a(Lnet/minecraft/potion/Potion;Lnet/minecraft/item/Item;Lnet/minecraft/potion/Potion;)V # addMix
+public net.minecraft.block.ComposterBlock func_220290_a(FLnet/minecraft/util/IItemProvider;)V # registerCompostable
