--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ org.gradle.daemon=false
 mod_id=rys
 mod_group=group.rys
 mod_name=Ready Your Shovels
-mod_version=0.1.15
-mod_authors=camiloss20
-mod_credits=Creator: Axoladdy, Programmer: camiloss20
+mod_version=0.1.16
+mod_authors=Axoladdy, camiloss20
+mod_credits=Axoladdy, camiloss20
 mod_description=Ready Your Shovels adds a unique new dirt based cave biome across most of the world. This unique new environment offers new content to explore and a new way to play survival mode.
