--- a/gradle.properties
+++ b/gradle.properties
@@ -10,3 +10,5 @@ mod_version=0.1.17
 mod_authors=Axoladdy, camiloss20
 mod_credits=Axoladdy, camiloss20, paradiscal
 mod_description=Ready Your Shovels adds a unique new dirt based cave biome across most of the world. This unique new environment offers new content to explore and a new way to play survival mode.
+
+forge_version=net.minecraftforge:forge:1.14.4-28.1.79
