add more tree texture

--- a/src/main/resources/assets/rys/models/block/apple_fruit_tree_head.json
+++ b/src/main/resources/assets/rys/models/block/apple_fruit_tree_head.json
@@ -1,7 +1,7 @@
 {
   "credit": "Made with Blockbench",
   "textures": {
-    "4": "rys:block/appletreefruit"
+    "tree": "rys:block/appletreefruit"
   },
   "elements": [
     {
@@ -33,7 +33,7 @@
             8.75,
             4.625
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "east": {
           "uv": [
@@ -42,7 +42,7 @@
             8.75,
             4.625
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "south": {
           "uv": [
@@ -51,7 +51,7 @@
             8.75,
             4.625
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "west": {
           "uv": [
@@ -60,7 +60,7 @@
             8.75,
             4.625
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "up": {
           "uv": [
@@ -69,7 +69,7 @@
             8.75,
             4.625
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "down": {
           "uv": [
@@ -78,7 +78,7 @@
             8.75,
             4.625
           ],
-          "texture": "#4"
+          "texture": "#tree"
         }
       }
     },
@@ -111,7 +111,7 @@
             13.375,
             2.75
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "east": {
           "uv": [
@@ -120,7 +120,7 @@
             13.375,
             2.75
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "south": {
           "uv": [
@@ -129,7 +129,7 @@
             13.375,
             2.75
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "west": {
           "uv": [
@@ -138,7 +138,7 @@
             13.375,
             2.75
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "up": {
           "uv": [
@@ -147,7 +147,7 @@
             13.375,
             2.75
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "down": {
           "uv": [
@@ -156,7 +156,7 @@
             13.375,
             2.75
           ],
-          "texture": "#4"
+          "texture": "#tree"
         }
       }
     },
@@ -189,7 +189,7 @@
             5.25,
             12.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "east": {
           "uv": [
@@ -198,7 +198,7 @@
             5.25,
             12.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "south": {
           "uv": [
@@ -207,7 +207,7 @@
             5.25,
             12.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "west": {
           "uv": [
@@ -216,7 +216,7 @@
             5.25,
             12.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "up": {
           "uv": [
@@ -225,7 +225,7 @@
             5.25,
             12.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "down": {
           "uv": [
@@ -234,7 +234,7 @@
             5.25,
             12.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         }
       }
     },
@@ -267,7 +267,7 @@
             5.25,
             12.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "east": {
           "uv": [
@@ -276,7 +276,7 @@
             5.25,
             12.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "south": {
           "uv": [
@@ -285,7 +285,7 @@
             5.25,
             12.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "west": {
           "uv": [
@@ -294,7 +294,7 @@
             5.25,
             12.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "up": {
           "uv": [
@@ -303,7 +303,7 @@
             5.25,
             12.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "down": {
           "uv": [
@@ -312,7 +312,7 @@
             5.25,
             12.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         }
       }
     },
@@ -336,7 +336,7 @@
             12.5,
             4.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "east": {
           "uv": [
@@ -345,7 +345,7 @@
             12.5,
             4.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "south": {
           "uv": [
@@ -354,7 +354,7 @@
             12.5,
             4.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "west": {
           "uv": [
@@ -363,7 +363,7 @@
             12.5,
             4.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "up": {
           "uv": [
@@ -372,7 +372,7 @@
             12.5,
             4.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "down": {
           "uv": [
@@ -381,7 +381,7 @@
             12.5,
             4.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         }
       }
     },
@@ -405,7 +405,7 @@
             12.5,
             4.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "east": {
           "uv": [
@@ -414,7 +414,7 @@
             12.5,
             4.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "south": {
           "uv": [
@@ -423,7 +423,7 @@
             12.5,
             4.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "west": {
           "uv": [
@@ -432,7 +432,7 @@
             12.5,
             4.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "up": {
           "uv": [
@@ -441,7 +441,7 @@
             12.5,
             4.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "down": {
           "uv": [
@@ -450,7 +450,7 @@
             12.5,
             4.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         }
       }
     },
@@ -474,7 +474,7 @@
             12.5,
             4.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "east": {
           "uv": [
@@ -483,7 +483,7 @@
             12.5,
             4.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "south": {
           "uv": [
@@ -492,7 +492,7 @@
             12.5,
             4.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "west": {
           "uv": [
@@ -501,7 +501,7 @@
             12.5,
             4.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "up": {
           "uv": [
@@ -510,7 +510,7 @@
             12.5,
             4.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "down": {
           "uv": [
@@ -519,7 +519,7 @@
             12.5,
             4.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         }
       }
     },
@@ -543,7 +543,7 @@
             12.5,
             4.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "east": {
           "uv": [
@@ -552,7 +552,7 @@
             12.5,
             4.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "south": {
           "uv": [
@@ -561,7 +561,7 @@
             12.5,
             4.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "west": {
           "uv": [
@@ -570,7 +570,7 @@
             12.5,
             4.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "up": {
           "uv": [
@@ -579,7 +579,7 @@
             12.5,
             4.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "down": {
           "uv": [
@@ -588,7 +588,7 @@
             12.5,
             4.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         }
       }
     },
@@ -621,7 +621,7 @@
             12.5,
             4.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "east": {
           "uv": [
@@ -630,7 +630,7 @@
             12.5,
             4.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "south": {
           "uv": [
@@ -639,7 +639,7 @@
             12.5,
             4.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "west": {
           "uv": [
@@ -648,7 +648,7 @@
             12.5,
             4.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "up": {
           "uv": [
@@ -657,7 +657,7 @@
             12.5,
             4.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "down": {
           "uv": [
@@ -666,7 +666,7 @@
             12.5,
             4.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         }
       }
     },
@@ -699,7 +699,7 @@
             12.5,
             4.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "east": {
           "uv": [
@@ -708,7 +708,7 @@
             12.5,
             4.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "south": {
           "uv": [
@@ -717,7 +717,7 @@
             12.5,
             4.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "west": {
           "uv": [
@@ -726,7 +726,7 @@
             12.5,
             4.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "up": {
           "uv": [
@@ -735,7 +735,7 @@
             12.5,
             4.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "down": {
           "uv": [
@@ -744,7 +744,7 @@
             12.5,
             4.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         }
       }
     }
