--- a/src/main/resources/assets/rys/models/block/apple_fruit_tree_head_dead.json
+++ b/src/main/resources/assets/rys/models/block/apple_fruit_tree_head_dead.json
@@ -1,7 +1,7 @@
 {
   "credit": "Made with Blockbench",
   "textures": {
-    "4": "rys:block/appletreebare",
+    "tree": "rys:block/appletreebare",
     "particle": "rys:block/appletreebare"
   },
   "elements": [
@@ -34,7 +34,7 @@
             8.75,
             4.625
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "east": {
           "uv": [
@@ -43,7 +43,7 @@
             8.75,
             4.625
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "south": {
           "uv": [
@@ -52,7 +52,7 @@
             8.75,
             4.625
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "west": {
           "uv": [
@@ -61,7 +61,7 @@
             8.75,
             4.625
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "up": {
           "uv": [
@@ -70,7 +70,7 @@
             8.75,
             4.625
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "down": {
           "uv": [
@@ -79,7 +79,7 @@
             8.75,
             4.625
           ],
-          "texture": "#4"
+          "texture": "#tree"
         }
       }
     },
@@ -112,7 +112,7 @@
             13.375,
             2.75
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "east": {
           "uv": [
@@ -121,7 +121,7 @@
             13.375,
             2.75
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "south": {
           "uv": [
@@ -130,7 +130,7 @@
             13.375,
             2.75
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "west": {
           "uv": [
@@ -139,7 +139,7 @@
             13.375,
             2.75
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "up": {
           "uv": [
@@ -148,7 +148,7 @@
             13.375,
             2.75
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "down": {
           "uv": [
@@ -157,7 +157,7 @@
             13.375,
             2.75
           ],
-          "texture": "#4"
+          "texture": "#tree"
         }
       }
     },
@@ -190,7 +190,7 @@
             5.25,
             12.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "east": {
           "uv": [
@@ -199,7 +199,7 @@
             5.25,
             12.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "south": {
           "uv": [
@@ -208,7 +208,7 @@
             5.25,
             12.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "west": {
           "uv": [
@@ -217,7 +217,7 @@
             5.25,
             12.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "up": {
           "uv": [
@@ -226,7 +226,7 @@
             5.25,
             12.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "down": {
           "uv": [
@@ -235,7 +235,7 @@
             5.25,
             12.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         }
       }
     },
@@ -268,7 +268,7 @@
             5.25,
             12.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "east": {
           "uv": [
@@ -277,7 +277,7 @@
             5.25,
             12.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "south": {
           "uv": [
@@ -286,7 +286,7 @@
             5.25,
             12.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "west": {
           "uv": [
@@ -295,7 +295,7 @@
             5.25,
             12.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "up": {
           "uv": [
@@ -304,7 +304,7 @@
             5.25,
             12.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "down": {
           "uv": [
@@ -313,7 +313,7 @@
             5.25,
             12.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         }
       }
     },
@@ -337,7 +337,7 @@
             12.5,
             4.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "east": {
           "uv": [
@@ -346,7 +346,7 @@
             12.5,
             4.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "south": {
           "uv": [
@@ -355,7 +355,7 @@
             12.5,
             4.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "west": {
           "uv": [
@@ -364,7 +364,7 @@
             12.5,
             4.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "up": {
           "uv": [
@@ -373,7 +373,7 @@
             12.5,
             4.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "down": {
           "uv": [
@@ -382,7 +382,7 @@
             12.5,
             4.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         }
       }
     },
@@ -406,7 +406,7 @@
             12.5,
             4.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "east": {
           "uv": [
@@ -415,7 +415,7 @@
             12.5,
             4.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "south": {
           "uv": [
@@ -424,7 +424,7 @@
             12.5,
             4.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "west": {
           "uv": [
@@ -433,7 +433,7 @@
             12.5,
             4.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "up": {
           "uv": [
@@ -442,7 +442,7 @@
             12.5,
             4.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "down": {
           "uv": [
@@ -451,7 +451,7 @@
             12.5,
             4.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         }
       }
     },
@@ -475,7 +475,7 @@
             12.5,
             4.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "east": {
           "uv": [
@@ -484,7 +484,7 @@
             12.5,
             4.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "south": {
           "uv": [
@@ -493,7 +493,7 @@
             12.5,
             4.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "west": {
           "uv": [
@@ -502,7 +502,7 @@
             12.5,
             4.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "up": {
           "uv": [
@@ -511,7 +511,7 @@
             12.5,
             4.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "down": {
           "uv": [
@@ -520,7 +520,7 @@
             12.5,
             4.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         }
       }
     },
@@ -544,7 +544,7 @@
             12.5,
             4.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "east": {
           "uv": [
@@ -553,7 +553,7 @@
             12.5,
             4.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "south": {
           "uv": [
@@ -562,7 +562,7 @@
             12.5,
             4.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "west": {
           "uv": [
@@ -571,7 +571,7 @@
             12.5,
             4.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "up": {
           "uv": [
@@ -580,7 +580,7 @@
             12.5,
             4.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "down": {
           "uv": [
@@ -589,7 +589,7 @@
             12.5,
             4.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         }
       }
     },
@@ -622,7 +622,7 @@
             12.5,
             4.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "east": {
           "uv": [
@@ -631,7 +631,7 @@
             12.5,
             4.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "south": {
           "uv": [
@@ -640,7 +640,7 @@
             12.5,
             4.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "west": {
           "uv": [
@@ -649,7 +649,7 @@
             12.5,
             4.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "up": {
           "uv": [
@@ -658,7 +658,7 @@
             12.5,
             4.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "down": {
           "uv": [
@@ -667,7 +667,7 @@
             12.5,
             4.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         }
       }
     },
@@ -700,7 +700,7 @@
             12.5,
             4.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "east": {
           "uv": [
@@ -709,7 +709,7 @@
             12.5,
             4.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "south": {
           "uv": [
@@ -718,7 +718,7 @@
             12.5,
             4.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "west": {
           "uv": [
@@ -727,7 +727,7 @@
             12.5,
             4.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "up": {
           "uv": [
@@ -736,7 +736,7 @@
             12.5,
             4.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "down": {
           "uv": [
@@ -745,7 +745,7 @@
             12.5,
             4.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         }
       }
     }
