--- a/src/main/resources/assets/rys/models/block/apple_fruit_tree_head_without_fruit.json
+++ b/src/main/resources/assets/rys/models/block/apple_fruit_tree_head_without_fruit.json
@@ -1,7 +1,7 @@
 {
   "credit": "Made with Blockbench",
   "textures": {
-    "4": "rys:block/appletreefruit",
+    "tree": "rys:block/appletreefruit",
     "particle": "rys:block/appletreefruit"
   },
   "elements": [
@@ -34,7 +34,7 @@
             8.75,
             4.625
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "east": {
           "uv": [
@@ -43,7 +43,7 @@
             8.75,
             4.625
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "south": {
           "uv": [
@@ -52,7 +52,7 @@
             8.75,
             4.625
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "west": {
           "uv": [
@@ -61,7 +61,7 @@
             8.75,
             4.625
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "up": {
           "uv": [
@@ -70,7 +70,7 @@
             8.75,
             4.625
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "down": {
           "uv": [
@@ -79,7 +79,7 @@
             8.75,
             4.625
           ],
-          "texture": "#4"
+          "texture": "#tree"
         }
       }
     },
@@ -112,7 +112,7 @@
             13.375,
             2.75
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "east": {
           "uv": [
@@ -121,7 +121,7 @@
             13.375,
             2.75
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "south": {
           "uv": [
@@ -130,7 +130,7 @@
             13.375,
             2.75
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "west": {
           "uv": [
@@ -139,7 +139,7 @@
             13.375,
             2.75
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "up": {
           "uv": [
@@ -148,7 +148,7 @@
             13.375,
             2.75
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "down": {
           "uv": [
@@ -157,7 +157,7 @@
             13.375,
             2.75
           ],
-          "texture": "#4"
+          "texture": "#tree"
         }
       }
     },
@@ -190,7 +190,7 @@
             5.25,
             12.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "east": {
           "uv": [
@@ -199,7 +199,7 @@
             5.25,
             12.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "south": {
           "uv": [
@@ -208,7 +208,7 @@
             5.25,
             12.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "west": {
           "uv": [
@@ -217,7 +217,7 @@
             5.25,
             12.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "up": {
           "uv": [
@@ -226,7 +226,7 @@
             5.25,
             12.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "down": {
           "uv": [
@@ -235,7 +235,7 @@
             5.25,
             12.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         }
       }
     },
@@ -268,7 +268,7 @@
             5.25,
             12.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "east": {
           "uv": [
@@ -277,7 +277,7 @@
             5.25,
             12.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "south": {
           "uv": [
@@ -286,7 +286,7 @@
             5.25,
             12.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "west": {
           "uv": [
@@ -295,7 +295,7 @@
             5.25,
             12.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "up": {
           "uv": [
@@ -304,7 +304,7 @@
             5.25,
             12.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         },
         "down": {
           "uv": [
@@ -313,7 +313,7 @@
             5.25,
             12.375
           ],
-          "texture": "#4"
+          "texture": "#tree"
         }
       }
     }
