--- a/src/main/resources/data/rys/loot_tables/blocks/apple_fruit_tree.json
+++ b/src/main/resources/data/rys/loot_tables/blocks/apple_fruit_tree.json
@@ -8,20 +8,13 @@
 					"type": "minecraft:item",
 					"conditions": [
 						{
-							"condition": "minecraft:block_state_property",
-							"block": "rys:apple_fruit_tree",
-							"properties": {
-								"dead": false
-							}
-						},
-						{
 							"condition": "minecraft:match_tool",
 							"predicate": {
 								"item": "minecraft:shears"
 							}
 						}
 					],
-					"name": "rys:apple_fruit_tree"
+                  "name": "rys:apple_fruit_sapling"
 				}
 			],
 			"conditions": [
