fixed fruit tree break particle

--- a/src/main/resources/assets/rys/models/block/apple_fruit_tree_bottom.json
+++ b/src/main/resources/assets/rys/models/block/apple_fruit_tree_bottom.json
@@ -2,7 +2,7 @@
   "credit": "Made with Blockbench",
   "textures": {
     "tree": "rys:block/appletreefruit",
-    "particle": "rys:block/appletreefruit"
+    "particle": "minecraft:block/oak_log"
   },
   "elements": [
     {
