--- a/src/main/resources/assets/rys/models/block/apple_fruit_tree_head.json
+++ b/src/main/resources/assets/rys/models/block/apple_fruit_tree_head.json
@@ -1,7 +1,8 @@
 {
   "credit": "Made with Blockbench",
   "textures": {
-    "tree": "rys:block/appletreefruit"
+    "tree": "rys:block/appletreefruit",
+    "particle": "minecraft:block/oak_leaves"
   },
   "elements": [
     {
