changed fruit tree model agein

--- a/src/main/resources/assets/rys/models/block/apple_fruit_tree_head_cut.json
+++ b/src/main/resources/assets/rys/models/block/apple_fruit_tree_head_cut.json
@@ -1,165 +1,7 @@
 {
-  "credit": "Made with Blockbench",
+  "parent": "rys:block/apple_fruit_tree_head",
   "textures": {
     "tree": "rys:block/appletreebare",
     "particle": "minecraft:block/oak_log"
-  },
-  "elements": [
-    {
-      "name": "decor_1",
-      "from": [
-        -11,
-        -10,
-        8
-      ],
-      "to": [
-        27,
-        24,
-        8
-      ],
-      "rotation": {
-        "angle": 45,
-        "axis": "y",
-        "origin": [
-          8,
-          8,
-          8
-        ]
-      },
-      "faces": {
-        "north": {
-          "uv": [
-            0.5,
-            8.25,
-            5.25,
-            12.375
-          ],
-          "texture": "#tree"
-        },
-        "east": {
-          "uv": [
-            0.5,
-            8.25,
-            5.25,
-            12.375
-          ],
-          "texture": "#tree"
-        },
-        "south": {
-          "uv": [
-            0.5,
-            8.25,
-            5.25,
-            12.375
-          ],
-          "texture": "#tree"
-        },
-        "west": {
-          "uv": [
-            0.5,
-            8.25,
-            5.25,
-            12.375
-          ],
-          "texture": "#tree"
-        },
-        "up": {
-          "uv": [
-            0.5,
-            8.25,
-            5.25,
-            12.375
-          ],
-          "texture": "#tree"
-        },
-        "down": {
-          "uv": [
-            0.5,
-            8.25,
-            5.25,
-            12.375
-          ],
-          "texture": "#tree"
-        }
-      }
-    },
-    {
-      "name": "decor_2",
-      "from": [
-        -11,
-        -10,
-        8
-      ],
-      "to": [
-        27,
-        24,
-        8
-      ],
-      "rotation": {
-        "angle": -45,
-        "axis": "y",
-        "origin": [
-          8,
-          8,
-          8
-        ]
-      },
-      "faces": {
-        "north": {
-          "uv": [
-            0.5,
-            8.25,
-            5.25,
-            12.375
-          ],
-          "texture": "#tree"
-        },
-        "east": {
-          "uv": [
-            0.5,
-            8.25,
-            5.25,
-            12.375
-          ],
-          "texture": "#tree"
-        },
-        "south": {
-          "uv": [
-            0.5,
-            8.25,
-            5.25,
-            12.375
-          ],
-          "texture": "#tree"
-        },
-        "west": {
-          "uv": [
-            0.5,
-            8.25,
-            5.25,
-            12.375
-          ],
-          "texture": "#tree"
-        },
-        "up": {
-          "uv": [
-            0.5,
-            8.25,
-            5.25,
-            12.375
-          ],
-          "texture": "#tree"
-        },
-        "down": {
-          "uv": [
-            0.5,
-            8.25,
-            5.25,
-            12.375
-          ],
-          "texture": "#tree"
-        }
-      }
-    }
-  ]
+  }
 }
