--- a/src/main/resources/assets/rys/models/block/apple_fruit_tree_head_dead.json
+++ b/src/main/resources/assets/rys/models/block/apple_fruit_tree_head_dead.json
@@ -1,753 +1,7 @@
 {
-  "credit": "Made with Blockbench",
+  "parent": "rys:block/apple_fruit_tree_head",
   "textures": {
     "tree": "rys:block/appletreebare",
     "particle": "minecraft:block/oak_log"
-  },
-  "elements": [
-    {
-      "name": "canopy",
-      "from": [
-        -3,
-        -3,
-        -3
-      ],
-      "to": [
-        19,
-        11,
-        19
-      ],
-      "rotation": {
-        "angle": 0,
-        "axis": "y",
-        "origin": [
-          8,
-          6,
-          8
-        ]
-      },
-      "faces": {
-        "north": {
-          "uv": [
-            6,
-            2.875,
-            8.75,
-            4.625
-          ],
-          "texture": "#tree"
-        },
-        "east": {
-          "uv": [
-            6,
-            2.875,
-            8.75,
-            4.625
-          ],
-          "texture": "#tree"
-        },
-        "south": {
-          "uv": [
-            6,
-            2.875,
-            8.75,
-            4.625
-          ],
-          "texture": "#tree"
-        },
-        "west": {
-          "uv": [
-            6,
-            2.875,
-            8.75,
-            4.625
-          ],
-          "texture": "#tree"
-        },
-        "up": {
-          "uv": [
-            6,
-            2.875,
-            8.75,
-            4.625
-          ],
-          "texture": "#tree"
-        },
-        "down": {
-          "uv": [
-            6,
-            2.875,
-            8.75,
-            4.625
-          ],
-          "texture": "#tree"
-        }
-      }
-    },
-    {
-      "name": "crown",
-      "from": [
-        2,
-        10,
-        2
-      ],
-      "to": [
-        14,
-        20,
-        14
-      ],
-      "rotation": {
-        "angle": 0,
-        "axis": "y",
-        "origin": [
-          8,
-          6,
-          8
-        ]
-      },
-      "faces": {
-        "north": {
-          "uv": [
-            11.875,
-            1.5,
-            13.375,
-            2.75
-          ],
-          "texture": "#tree"
-        },
-        "east": {
-          "uv": [
-            11.875,
-            1.5,
-            13.375,
-            2.75
-          ],
-          "texture": "#tree"
-        },
-        "south": {
-          "uv": [
-            11.875,
-            1.5,
-            13.375,
-            2.75
-          ],
-          "texture": "#tree"
-        },
-        "west": {
-          "uv": [
-            11.875,
-            1.5,
-            13.375,
-            2.75
-          ],
-          "texture": "#tree"
-        },
-        "up": {
-          "uv": [
-            11.875,
-            1.5,
-            13.375,
-            2.75
-          ],
-          "texture": "#tree"
-        },
-        "down": {
-          "uv": [
-            11.875,
-            1.5,
-            13.375,
-            2.75
-          ],
-          "texture": "#tree"
-        }
-      }
-    },
-    {
-      "name": "decor_1",
-      "from": [
-        -11,
-        -10,
-        8
-      ],
-      "to": [
-        27,
-        24,
-        8
-      ],
-      "rotation": {
-        "angle": 45,
-        "axis": "y",
-        "origin": [
-          8,
-          8,
-          8
-        ]
-      },
-      "faces": {
-        "north": {
-          "uv": [
-            0.5,
-            8.25,
-            5.25,
-            12.375
-          ],
-          "texture": "#tree"
-        },
-        "east": {
-          "uv": [
-            0.5,
-            8.25,
-            5.25,
-            12.375
-          ],
-          "texture": "#tree"
-        },
-        "south": {
-          "uv": [
-            0.5,
-            8.25,
-            5.25,
-            12.375
-          ],
-          "texture": "#tree"
-        },
-        "west": {
-          "uv": [
-            0.5,
-            8.25,
-            5.25,
-            12.375
-          ],
-          "texture": "#tree"
-        },
-        "up": {
-          "uv": [
-            0.5,
-            8.25,
-            5.25,
-            12.375
-          ],
-          "texture": "#tree"
-        },
-        "down": {
-          "uv": [
-            0.5,
-            8.25,
-            5.25,
-            12.375
-          ],
-          "texture": "#tree"
-        }
-      }
-    },
-    {
-      "name": "decor_2",
-      "from": [
-        -11,
-        -10,
-        8
-      ],
-      "to": [
-        27,
-        24,
-        8
-      ],
-      "rotation": {
-        "angle": -45,
-        "axis": "y",
-        "origin": [
-          8,
-          8,
-          8
-        ]
-      },
-      "faces": {
-        "north": {
-          "uv": [
-            0.5,
-            8.25,
-            5.25,
-            12.375
-          ],
-          "texture": "#tree"
-        },
-        "east": {
-          "uv": [
-            0.5,
-            8.25,
-            5.25,
-            12.375
-          ],
-          "texture": "#tree"
-        },
-        "south": {
-          "uv": [
-            0.5,
-            8.25,
-            5.25,
-            12.375
-          ],
-          "texture": "#tree"
-        },
-        "west": {
-          "uv": [
-            0.5,
-            8.25,
-            5.25,
-            12.375
-          ],
-          "texture": "#tree"
-        },
-        "up": {
-          "uv": [
-            0.5,
-            8.25,
-            5.25,
-            12.375
-          ],
-          "texture": "#tree"
-        },
-        "down": {
-          "uv": [
-            0.5,
-            8.25,
-            5.25,
-            12.375
-          ],
-          "texture": "#tree"
-        }
-      }
-    },
-    {
-      "name": "fruit_1",
-      "from": [
-        -5,
-        0,
-        11
-      ],
-      "to": [
-        0,
-        5,
-        16
-      ],
-      "faces": {
-        "north": {
-          "uv": [
-            11.875,
-            3.75,
-            12.5,
-            4.375
-          ],
-          "texture": "#tree"
-        },
-        "east": {
-          "uv": [
-            11.875,
-            3.75,
-            12.5,
-            4.375
-          ],
-          "texture": "#tree"
-        },
-        "south": {
-          "uv": [
-            11.875,
-            3.75,
-            12.5,
-            4.375
-          ],
-          "texture": "#tree"
-        },
-        "west": {
-          "uv": [
-            11.875,
-            3.75,
-            12.5,
-            4.375
-          ],
-          "texture": "#tree"
-        },
-        "up": {
-          "uv": [
-            11.875,
-            3.75,
-            12.5,
-            4.375
-          ],
-          "texture": "#tree"
-        },
-        "down": {
-          "uv": [
-            11.875,
-            3.75,
-            12.5,
-            4.375
-          ],
-          "texture": "#tree"
-        }
-      }
-    },
-    {
-      "name": "fruit_2",
-      "from": [
-        17,
-        4,
-        12
-      ],
-      "to": [
-        22,
-        9,
-        17
-      ],
-      "faces": {
-        "north": {
-          "uv": [
-            11.875,
-            3.75,
-            12.5,
-            4.375
-          ],
-          "texture": "#tree"
-        },
-        "east": {
-          "uv": [
-            11.875,
-            3.75,
-            12.5,
-            4.375
-          ],
-          "texture": "#tree"
-        },
-        "south": {
-          "uv": [
-            11.875,
-            3.75,
-            12.5,
-            4.375
-          ],
-          "texture": "#tree"
-        },
-        "west": {
-          "uv": [
-            11.875,
-            3.75,
-            12.5,
-            4.375
-          ],
-          "texture": "#tree"
-        },
-        "up": {
-          "uv": [
-            11.875,
-            3.75,
-            12.5,
-            4.375
-          ],
-          "texture": "#tree"
-        },
-        "down": {
-          "uv": [
-            11.875,
-            3.75,
-            12.5,
-            4.375
-          ],
-          "texture": "#tree"
-        }
-      }
-    },
-    {
-      "name": "fruit_3",
-      "from": [
-        -5,
-        5,
-        1
-      ],
-      "to": [
-        0,
-        10,
-        6
-      ],
-      "faces": {
-        "north": {
-          "uv": [
-            11.875,
-            3.75,
-            12.5,
-            4.375
-          ],
-          "texture": "#tree"
-        },
-        "east": {
-          "uv": [
-            11.875,
-            3.75,
-            12.5,
-            4.375
-          ],
-          "texture": "#tree"
-        },
-        "south": {
-          "uv": [
-            11.875,
-            3.75,
-            12.5,
-            4.375
-          ],
-          "texture": "#tree"
-        },
-        "west": {
-          "uv": [
-            11.875,
-            3.75,
-            12.5,
-            4.375
-          ],
-          "texture": "#tree"
-        },
-        "up": {
-          "uv": [
-            11.875,
-            3.75,
-            12.5,
-            4.375
-          ],
-          "texture": "#tree"
-        },
-        "down": {
-          "uv": [
-            11.875,
-            3.75,
-            12.5,
-            4.375
-          ],
-          "texture": "#tree"
-        }
-      }
-    },
-    {
-      "name": "fruit_4",
-      "from": [
-        8,
-        -1,
-        17
-      ],
-      "to": [
-        13,
-        4,
-        22
-      ],
-      "faces": {
-        "north": {
-          "uv": [
-            11.875,
-            3.75,
-            12.5,
-            4.375
-          ],
-          "texture": "#tree"
-        },
-        "east": {
-          "uv": [
-            11.875,
-            3.75,
-            12.5,
-            4.375
-          ],
-          "texture": "#tree"
-        },
-        "south": {
-          "uv": [
-            11.875,
-            3.75,
-            12.5,
-            4.375
-          ],
-          "texture": "#tree"
-        },
-        "west": {
-          "uv": [
-            11.875,
-            3.75,
-            12.5,
-            4.375
-          ],
-          "texture": "#tree"
-        },
-        "up": {
-          "uv": [
-            11.875,
-            3.75,
-            12.5,
-            4.375
-          ],
-          "texture": "#tree"
-        },
-        "down": {
-          "uv": [
-            11.875,
-            3.75,
-            12.5,
-            4.375
-          ],
-          "texture": "#tree"
-        }
-      }
-    },
-    {
-      "name": "fruit_4",
-      "from": [
-        5,
-        0,
-        -5
-      ],
-      "to": [
-        10,
-        5,
-        0
-      ],
-      "rotation": {
-        "angle": 0,
-        "axis": "y",
-        "origin": [
-          10,
-          8,
-          8
-        ]
-      },
-      "faces": {
-        "north": {
-          "uv": [
-            11.875,
-            3.75,
-            12.5,
-            4.375
-          ],
-          "texture": "#tree"
-        },
-        "east": {
-          "uv": [
-            11.875,
-            3.75,
-            12.5,
-            4.375
-          ],
-          "texture": "#tree"
-        },
-        "south": {
-          "uv": [
-            11.875,
-            3.75,
-            12.5,
-            4.375
-          ],
-          "texture": "#tree"
-        },
-        "west": {
-          "uv": [
-            11.875,
-            3.75,
-            12.5,
-            4.375
-          ],
-          "texture": "#tree"
-        },
-        "up": {
-          "uv": [
-            11.875,
-            3.75,
-            12.5,
-            4.375
-          ],
-          "texture": "#tree"
-        },
-        "down": {
-          "uv": [
-            11.875,
-            3.75,
-            12.5,
-            4.375
-          ],
-          "texture": "#tree"
-        }
-      }
-    },
-    {
-      "name": "fruit_5",
-      "from": [
-        17,
-        1,
-        0
-      ],
-      "to": [
-        22,
-        6,
-        5
-      ],
-      "rotation": {
-        "angle": 0,
-        "axis": "y",
-        "origin": [
-          10,
-          8,
-          8
-        ]
-      },
-      "faces": {
-        "north": {
-          "uv": [
-            11.875,
-            3.75,
-            12.5,
-            4.375
-          ],
-          "texture": "#tree"
-        },
-        "east": {
-          "uv": [
-            11.875,
-            3.75,
-            12.5,
-            4.375
-          ],
-          "texture": "#tree"
-        },
-        "south": {
-          "uv": [
-            11.875,
-            3.75,
-            12.5,
-            4.375
-          ],
-          "texture": "#tree"
-        },
-        "west": {
-          "uv": [
-            11.875,
-            3.75,
-            12.5,
-            4.375
-          ],
-          "texture": "#tree"
-        },
-        "up": {
-          "uv": [
-            11.875,
-            3.75,
-            12.5,
-            4.375
-          ],
-          "texture": "#tree"
-        },
-        "down": {
-          "uv": [
-            11.875,
-            3.75,
-            12.5,
-            4.375
-          ],
-          "texture": "#tree"
-        }
-      }
-    }
-  ]
+  }
 }
