new tree texture

--- a/src/main/resources/assets/rys/models/block/apple_fruit_sapling.json
+++ b/src/main/resources/assets/rys/models/block/apple_fruit_sapling.json
@@ -1,6 +1,6 @@
 {
   "parent": "block/cross",
   "textures": {
-    "cross": "rys:block/apple_fruit_tree_0"
+    "cross": "rys:block/appletreesapling"
   }
 }
